# Thinker

./: .env.example  .gitignore  MasterConfig_2026-06-04.xlsx  README.md  active_task_state.txt  agent_instruction_prompt.txt  ai_engineer_task.txt  curl.txt  damco_task.txt  initialize_task.txt  pyproject.toml  starter.txt  system_rules_and_learning.txt  task_langchain_react_plan_context.txt  task_langchain_react_plan_flow.txt  task_multiagent_dev_studio_context.txt  task_multiagent_dev_studio_flow.txt  task_understand_damco_task_context.txt  task_understand_damco_task_flow.txt  v_script.txt
.claude/: settings.json
claude_related/: CLAUDE.md  active_task_state.txt  agent_guide.md
examples/: orders_seed.py  sales_report.yaml  seed.py
frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AppRenderer.jsx  Editor.jsx
frontend/src/api/: client.js
frontend/src/editor/: ChatPanel.jsx  CodeEditor.jsx  LivePreview.jsx  WidgetTree.jsx
frontend/src/plan/: PlanPage.jsx
frontend/src/styles/: editor.css
frontend/src/widgets/: Button.jsx  Chart.jsx  Input.jsx  Placeholder.jsx  Table.jsx  Text.jsx  index.js
logiclive/: __init__.py  agents.py  ai.py  app.py  db.py  react_agent.py  sandbox.py  widgets_registry.py
tests/: test_ai.py  test_db.py  test_render.py  test_sandbox.py
