[project]
name = "logiclive"
version = "0.1.0"
description = "Server-Driven UI platform with DB-resident Python logic, editable by hand or via scoped AI chat. Damco Builder Challenge submission (Track A)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sagar Kanake", email = "sagarkanke22@gmail.com" }]
keywords = ["sdui", "server-driven-ui", "low-code", "ai-codegen", "internal-tools"]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["logiclive"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
